--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux] <ifort>:
+	Treat like icc and ecc, for fixed `-Wl,' and `-KPIC' settings.
+
 2008-02-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/archive-in-archive.at
