--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC): [linux] <ifort>:
+	Treat like icc and ecc, for fixed `-Wl,' and `-KPIC' settings.
+
 2008-02-01  Peter O'Gorman  <peter@pogma.com>
 
 	* NEWS: Update.
