--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/mdemo/Makefile.am (@LIBLTDL@): Update outdated
+	dependencies.
+	($(top_distdir)/libltdl/libtool): Remove.
+	Fixes spurious mdemo-dryrun failure with OpenBSD make.
+
 2008-02-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux] <ifort>:
