--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/configure.ac: Bump package version.
+	* HACKING: Reminder to do it next time, too.
+
 2008-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/mdemo/Makefile.am (@LIBLTDL@): Update outdated
