--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-02-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtoolize.m4sh (func_install_pkgconfig_files): Only call
+	func_install_pkgconfig_parent if $seen_autoconf.
+	* tests/standalone.at (compiling softlinked libltdl)
+	(compiling copied libltdl, installable libltdl)
+	(linking libltdl without autotools): Use checked libtoolize
+	calls to catch warnings.
+
 2008-02-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/configure.ac: Bump package version.
