--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* libtool.m4 (_LT_SYS_DYNAMIC_LINKER): better handling of
+	predefined values for lt_cv_sys_lib_search_path_spec and
+	lt_cv_sys_lib_dlsearch_path_spec.
+
 2008-02-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtoolize.m4sh (func_install_pkgconfig_files): Only call
