--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-26  Karl Berry  <karl@freefriends.org>
+
+	* libltdl/argz.c (argz_add, argz_count): New functions.
+	* libltdl/argz_.h: Declare them.
+	Report by Juan Manuel Guerrero <juan.guerrero@gmx.de>.
+
 2008-02-20  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/m4/libtool.m4 (_LT_LANG_GCJ_CONFIG): Do not call the
