--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-27  Peter O'Gorman  <peter@pogma.com>
+
+	* libtool.m4 [darwin]: Really use _lt_dar_allow_undefined for
+	allow_undefined_flag.
+	Reported by Eric Hall <eric@darkart.com>.
+
 2008-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER): better handling
