--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 2.3b: 2008-??-??: CVS version 2.3a, Libtool team:
+
+* Nothing yet!
+
 New in 2.2: 2008-03-01; CVS version 2.1c, Libtool team:
 
 * Bug fixes:
