--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ New in 2.3b: 2008-??-??: CVS version 2.3a, Libtool team:
 
   - Fix 2.2 regression in libltdl that causes memory corruption upon
     repeated `lt_dlinit(); lt_dlexit()'.
+  - Fix 2.2 regression in that `libtool --mode=execute CMD ARGS' does not
+    transform ARGS that do not look like shell or C wrappers of libtool
+    programs.
 
 New in 2.2: 2008-03-01; CVS version 2.1c, Libtool team:
 
