--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-06  Gary V. Vaughan  <gary@gnu.org>
+
+	* Makefile.maint (TSDEPS_DIST): Removed.  No longer used.
+	(TSDEPS): libtool.m4 has long since moved to libltdl.
+	(cvs-dist): Don't put the suffix dot in twice.
+
 2008-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/convenience.at (Java convenience archives): Skip test if
