--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-06  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/m4/libtool.m4 (_LT_PROG_FC): Report FC=no if the FC
+	compiler is not a GNU compiler and the CXX compiler is a GNU
+	compiler.
+	Reported by Nelson H. F. Beebe.
+
 2008-03-06  Gary V. Vaughan  <gary@gnu.org>
 
 	* Makefile.maint (TSDEPS_DIST): Removed.  No longer used.
