--- a/THANKS
+++ b/THANKS
@@ -87,6 +87,7 @@
   Frank Ch. Eigler		fche@cygnus.com
   Fred Cox			sailorfred@yahoo.com
   H.J. Lu			hjl@gnu.org
+  Henning Nielsen Lund		hnl_dk@amigaos.dk
   Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
   Jacob Meuser			jakemsr@jakemsr.com
