--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS: Update.
+
 2008-03-12  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src) [file
