* libltdl/m4/ltoptions.m4 (AC_LIBTOOL_WIN32_DLL): Require AC_CANONICAL_HOST. * THANKS: Update. Report by Jakub Bogusz.

--- a/THANKS
+++ b/THANKS
@@ -90,6 +90,7 @@
   Henning Nielsen Lund		hnl_dk@amigaos.dk
   Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
+  Jakub Bogusz			qboosh@pld-linux.org
   Jacob Meuser			jakemsr@jakemsr.com
   James Su			james.su@gmail.com
   Jeff Squyres			jsquyres@lam-mpi.org
