--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/ltoptions.m4 (AC_LIBTOOL_WIN32_DLL): Require
+	AC_CANONICAL_HOST.
+	* THANKS: Update.
+	Report by Jakub Bogusz.
+
 2008-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* NEWS: Update.
