--- a/THANKS
+++ b/THANKS
@@ -108,6 +108,7 @@
   Marc Espie			espie@nerim.net
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
   Mark Kettenis			kettenis@phys.uva.nl
+  Mike Frysinger		vapier@gentoo.org
   Olly Betts			olly@muscat.co.uk
   Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Eggert			eggert@twinsun.com
