--- a/THANKS
+++ b/THANKS
@@ -109,6 +109,7 @@
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
   Mark Kettenis			kettenis@phys.uva.nl
   Mike Frysinger		vapier@gentoo.org
+  Nix				nix@esperi.org.uk
   Olly Betts			olly@muscat.co.uk
   Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Eggert			eggert@twinsun.com
