--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-27  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/m4/libtool.m4 [_LT_REQUIRED_DARWIN_CHECKS]: Fix the
+	test for -single_module and log it to config.log.
+	Reported by Torok Edwin and Nigel Home.
+
 2008-03-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Document that disable-static plus -all-static is not portable.
