--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-01  Gary V. Vaughan  <gary@gnu.arg>
+
+	* libltdl/m4/libtool.m4, libltdl/m4/ltdl.m4,
+	libltdl/m4/ltoptions.m4: Bump serial numbers to account for
+	changes since 2.2 release.
+
 2008-03-27  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/m4/libtool.m4 [_LT_REQUIRED_DARWIN_CHECKS]: Fix the
