* doc/libtool.texi (Libltdl interface): Add missing documentation for lt_dlopenavise. Reported by Anton Erti <anton@mips.complang.tuwien.ac.at>
Reported by Olly Betts <olly@survex.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
 2008-04-07  Gary V. Vaughan  <gary@gnu.arg>
 
+	* doc/libtool.texi (Libltdl interface): Add missing
+	documentation for lt_dlopenavise.
+	Reported by Anton Erti <anton@mips.complang.tuwien.ac.at>
+
 	* configure.ac, libltdl/configure.ac (AM_INIT_AUTOMAKE): Use
 	gnu rather than gnits standards so that version number 2.2.3a
 	is not rejected!
-	Repoted by Olly Betts  <olly@survex.com>
+	Reported by Olly Betts <olly@survex.com>
 
 2008-04-01  Gary V. Vaughan  <gary@gnu.arg>
 
