--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3685,6 +3685,13 @@ to be able to @code{dlopen} such libraries as well as libtool modules
 transparently.
 @end deftypefun
 
+@deftypefun lt_dlhandle lt_dlopenadvise (const char *@var{filename}, @w{lt_dladvise *@var{advise}})
+The same as @code{lt_dlopen}, except that it also requires an additional
+argument which may contain additional hints to the underlying system
+module loader.  The @var{advise} parameter is opaque and can only be
+accessed with the functions documented below.
+@end deftypefun
+
 @deftypefun int lt_dladvise_init (lt_dladvise *@var{advise})
 The @var{advise} parameter can be used to pass hints to the module
 loader when using @code{lt_dlopenadvise} to perform the loading.
