--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_PROG_XSI_SHELLFNS) <func_xform>:
+	New function.
+	* libltdl/config/ltmain.m4sh (func_mode_compile): Use it to
+	avoid two forks with XSI shells.
+	* tests/suffix.test: Also test a file with multiple dots.
+
 2008-04-10  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/config/ltmain.m4sh (func_win32_libid,
