--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-18  Andreas Schwab  <schwab@suse.de>
+
+	* libltdl/m4/ltoptions.m4 (AC_ENABLE_SHARED): Check optional
+	argument.
+	(AC_ENABLE_STATIC): Likewise.
+	(AC_ENABLE_FAST_INSTALL): Likewise.
+
 2008-04-16  Eric Blake  <ebb9@byu.net>
 
 	Make ChangeLog merges easier.
